Tricked gradle into using jdk 19